--- a/lesson2.html
+++ b/lesson2.html
@@ -17,7 +17,8 @@
     <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 
     <!-- Bootstrap v3.3.4 Grid Styles -->
-    <style>/*!
+    <style>
+ /*!
  * Bootstrap v3.3.4 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
