--- a/lesson2.html
+++ b/lesson2.html
@@ -5,11 +5,12 @@
 
     <meta charset="utf-8">
 
-    <title>Английский за 16 уроков </title>
-    <meta name="description" content="Бесплатный курс английского языка с заданиями для самостоятельного повторения">
+    <title>Второй урок английского</title>
+    <meta name="description" content="второй урок бсплатного курса английского языка с заданиями для самостоятельного повторения пройденного материала (вопросительные слова)">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
     <meta property="og:image" content="path/to/image.jpg">
     <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
@@ -17,8 +18,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 
     <!-- Bootstrap v3.3.4 Grid Styles -->
-    <style>
- /*!
+    <style>/*!
  * Bootstrap v3.3.4 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
@@ -98,7 +98,7 @@
         <link rel="stylesheet" href="css/fonts.min.css">
         <link rel="stylesheet" href="css/main.min.css">
     </noscript>
-    <meta name="yandex-verification" content="91ab7a27b99b4566" />
+
 </head>
 
 <body>
@@ -106,54 +106,192 @@
 <!--<div class="roc"></div>-->
 
 <!-- Здесь пишем код -->
-
 <header>
-    <div class="main">
-        <h1>Начать говорить на английском языке за 16 часов </h1>
-        <div class="container"><div><p>Если Вы зашли на этот сайт то Вы как и я хотите быстро овладеть базовыми знаниями английского языка. Этот курс абсолютно бесплатен и основан на уроках Дмитрия Петрова - <a href="https://www.youtube.com/watch?list=PLoU6OXYTp-19irnXQZeBKBNzWcl24SDtO&v=KlCsenKsQ70"> Полиглот английский за 16 часов.</a> Фактически - это мой конспект с добавлением интерактивных заданий. Задания к каждому уроку будут формироваться автоматичски на основе пройденного материала и базовых 500-т слов английского языка. Надеюсь этот подход будет полезен не только мне...((<span style="font-size: 0.8em">
-            <br>На странице урока при нажатии на кнопку "Изменить" меняется задание, при нажатии на кнопку "Конспект" открывается краткий конспект текущего урока
-            <br>Вы можете навести указатель мыши на новое слово и если оно кликабельно - то откроется в переводчике Google, а там Вы сможете его прослушать и узнать все возможные варианты перевода.</span>
-        </p></div></div>
+    <!--<div class="main">-->
+    <!--<h1>Уроки английского языка</h1>-->
+    <!--</div>-->
 
-
-    </div>
 
 </header>
 
+<div class="first-lesson">
 
-<div class="main-lesson">
-    <div class="carousel">
+    <h2>Урок №2</h2>
 
-        <div class="owl-carousel">
-            <div class="item"><div class="hed-lesson"><h3>Урок №1</h3></div><h4><a href="/lesson1.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №1"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №2</h3></div>    <h4><a href="/lesson2.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №2"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №3</h3></div><h4><a href="/lesson3.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №3"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №4</h3></div><h4><a href="/lesson4.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №4"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №5</h3></div><h4><a href="/lesson5.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №5"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №6</h3></div><h4><a href="/lesson6.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №6"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №7</h3></div><h4><a href="/lesson7.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №7"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №8</h3></div><h4><a href="/lesson8.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №8"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №9</h3></div><h4><a href="/lesson9.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №9"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №10</h3></div><h4><a href="/lesson10.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №10"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №11</h3></div><h4><a href="/lesson11.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №11"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №12</h3></div><h4><a href="/lesson12.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №12"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №13</h3></div><h4><a href="/lesson13.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №13"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №14</h3></div><h4><a href="/lesson14.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №14"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №15</h3></div><h4><a href="/lesson15.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №15"></a></h4></div>
-            <div class="item"><div class="hed-lesson"><h3>Урок №16</h3></div><h4><a href="/lesson16.html"><img src="img/scrin-lessons/less_1.png" alt="Урок Урок №16"></a></h4></div>
+    <div style="margin: auto; margin-bottom: 30px">
+        <iframe width="426" height="240" src="https://www.youtube.com/embed/iOx4_t8bBXE" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="less-2 container" id="hidden">
+        <div class="row">
+            <div class="col-xs-12 _table future ">
+                <div class="hed col-xs-12"><p>> 50000 слов за 1 минуту</p>
+                    </div>
+
+                <div class="col-xs-5 _center">Русским словам заканчивающимся на <i style="color: red">...-ция, ...-сия</i></div>
+                <div class="col-xs-2 _center">&#8596;</div>
+                <div class="col-xs-5 _center">Соответствуют английские слова с окончанием <i style="color: red">...-tion, ...-sion</i></div>
+
+            </div>
+
         </div>
 
+        <div class="row">
+            <div class="col-xs-12 _table present">
+                <div class="hed col-xs-12"><p>Местоимения</p>
+                    </div>
+                <div class="col-xs-5 hed_2">Кто?</div>
+                <div class="col-xs-2 hed_2">
+                    &#8596;
+                </div>
+                <div class="col-xs-5 hed_2">Кого? Кому?</div>
+
+
+                <div class="col-xs-5 _center">
+                    <div>I</div>
+                    <div class="sha">You</div>
+                    <div class="sha">He</div>
+                    <div class="sha">She</div>
+                    <div class="sha">We</div>
+                    <div class="sha">They</div>
+                </div>
+                <div class="col-xs-2 _center">
+                    <div>&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                </div>
+                <div class="col-xs-5 _center">
+                    <div>Me</div>
+                    <div class="sha">You</div>
+                    <div class="sha">Him</div>
+                    <div class="sha">Her</div>
+                    <div class="sha">Us</div>
+                    <div class="sha">Them</div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 _table future ">
+                <div class="hed col-xs-12"><p>Вопросы</p>
+                    </div>
+
+                <div class="col-xs-5 _center">
+                    <div>What</div>
+                    <div class="sha">Why</div>
+                    <div class="sha">Who</div>
+                    <div class="sha">Where</div>
+                    <div class="sha">When</div>
+                    <div class="sha">How</div>
+                </div>
+                <div class="col-xs-2 _center">
+                    <div>&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                </div>
+                <div class="col-xs-5 _center">
+                    <div>Что? Какой?</div>
+                    <div class="sha">Почему? Зачем</div>
+                    <div class="sha">Кто?</div>
+                    <div class="sha">Где? Куда?</div>
+                    <div class="sha">Когда?</div>
+                    <div class="sha">Как?</div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 _table present">
+                <div class="hed col-xs-12"><p>Предлоги</p>
+                    <p>(обозначение направления)</p>
+                </div>
+
+
+
+                <div class="col-xs-5 _center">
+                    <div>in</div>
+                    <div class="sha">to</div>
+                    <div class="sha">from</div>
+                </div>
+                <div class="col-xs-2 _center">
+                    <div>&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                </div>
+                <div class="col-xs-5 _center">
+                    <div>в</div>
+                    <div class="sha">куда, к чему, к кому</div>
+                    <div class="sha">откуда</div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 _table future ">
+                <div class="hed col-xs-12"><p>Слова - паразиты</p>
+                </div>
+
+                <div class="col-xs-5 _center">
+                    <div>well</div>
+                    <div class="sha">you know</div>
+                    <div class="sha">I mean</div>
+                    <div class="sha">like</div>
+
+                </div>
+                <div class="col-xs-2 _center">
+                    <div>&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+                    <div class="sha">&#8596;</div>
+
+                </div>
+                <div class="col-xs-5 _center">
+                    <div>ну</div>
+                    <div class="sha">вы знаете</div>
+                    <div class="sha">я имею в виду</div>
+                    <div class="sha">как бы</div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
     </div>
+
+
+
+
+
+
+    <h2 id="task">Задание для самостоятельного выполнения:</h2>
+    <div id="vision" class="change hidden" onclick="chengFunkVis()">Конспект</div>
+    <h3 id="question">
+
+    </h3>
+    <div class="change" onclick="chengFunk2less()">Начать</div>
 </div>
 
-<div class="goodshare-h">
-    <div class="good"><a href="#" class="goodshare" data-type="fb"><i class="fa fa-facebook" style="color: #3B5998"></i></a></div>
-    <div class="good"><a href="#" class="goodshare" data-type="vk"><i class="fa fa-vk" style="color: #5B7FA6"></i></a></div>
-    <div class="good"><a href="#" class="goodshare" data-type="ok"><i class="fa fa-odnoklassniki" style="color: #f2720c"></i></a></div>
-    <div class="good"><a href="#" class="goodshare" data-type="tw"><i class="fa fa-twitter" style="color: #4099FF"></i></a></div>
-    <div class="good"><a href="#" class="goodshare" data-type="rd"><i class="fa fa-reddit" style="color: #ff5700"></i></a></div>
-    <div class="good"><a href="#" class="goodshare" data-type="gp"><i class="fa fa-google-plus" style="color: #D84B37"></i></a></div>
-</div>
+
 <div class="hidden"></div>
 
 <!--[if lt IE 9]>
@@ -189,9 +327,7 @@
     }
 }(window, document, scr);
 </script>
-
 <!-- Load Scripts End -->
-
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
